Fixed info link positioning and map overflow

--- a/ckanext/tiledmap/theme/public/css/maps.css
+++ b/ckanext/tiledmap/theme/public/css/maps.css
@@ -104,6 +104,25 @@ div.tiled-map-info{
     position: relative;
 }
 
+div.tiled-map-point-detail,
+div.point-detail{
+    height: inherit;
+}
+
+div.point-detail{
+    box-sizing: border-box;
+    padding-bottom: 30px;
+}
+
+div.point-detail.multiple-records{
+    padding-bottom: 115px;
+}
+
+div.point-detail-wrapper{
+    overflow-y: auto;
+    height: 100%;
+}
+
 .panel.sidebar .close{
     position: absolute;
     top: 4px;
@@ -138,7 +157,7 @@ div.point-detail div.point-detail-title {
 
 div.point-detail table{
     margin: 0 8px;
-    min-width: 210px;
+    width: 210px;
 }
 
 div.point-detail table tr{
@@ -150,15 +169,29 @@ div.point-detail table td, th{
     vertical-align: top;
 }
 
-div.point-detail .point-detail-info {
+div.point-detail table td{
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+div.point-detail table{
+    width: 100px;
+    overflow: hidden;
+}
+
+div.point-detail-info {
   font-size: 0.9em;
   color: #888;
   position: absolute;
   bottom: 0;
   background: #E4E4E4;
+  padding: 0;
+  text-align: center;
+  min-width: 230px;
+  padding: 10px;
 }
 
-div.point-detail .point-detail-info a:hover{
+div.point-detail-info a:hover{
     text-decoration: underline;
 }
 
@@ -167,7 +200,8 @@ div.point-detail .point-detail-tree-label {
   font-size: 0.9em;
 }
 
-div.point-detail-tree {
+div.point-detail-tree,
+div.point-detail table{
     font-size: 0.9em;
     margin-bottom: 1em;
 }
